# rag-whatsapp-assistant

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/agents/: agent.py  executor.py  parser.py  prompt.py  registry.py  responder.py  response_prompt.py  result.py  selector.py  tool.py  utils.py
app/agents/tools/: calculator_tool.py  rag_tool.py  time_tool.py
app/core/: config.py  container.py  logger.py
app/database/: database.py  init_db.py
app/graph/: agent_graph.py  checkpointer.py  state.py  workflow.py
app/handlers/: audio_handler.py  text_handler.py
app/memory/: service.py
app/providers/: ai_provider.py
app/providers/gemini/: chat.py  embeddings.py  provider.py
app/providers/whatsapp/: green_api.py  provider.py
app/rag/: chroma.py  chunker.py  indexer.py  prompt.py  retriever.py  service.py
app/rag/graph/: rag_graph.py  state.py  workflow.py
app/routes/: test.py  webhook.py
app/services/: media.py  memory.py  message_parser.py
app/tests/: chroma_test.py  rag_test.py  retriever_test.py
docs/graphs/: agent.md  rag.md
knowledge/: company.txt
scripts/: visualize_graphs.py
tests/: test_agent.py  test_chroma.py  test_rag.py  test_registry.py  test_tool.py  test_webhook.py
tests/agents/: test_agent.py  test_agent_graph.py
tests/memory/: test_memory.py
tests/rag/: test_chunker.py  test_graph.py  test_retriever.py  test_service.py
